# albion

./: .gitignore  CMakeLists.txt  README.md
Testing/: BasicPositionalArgumentParsingChecksTest.cpp  CMakeLists.txt  DummyTest.cpp  GTestCheckTest.cpp
include/: app.h  dummy.h
src/: main.cpp
src/lib/: app.cpp  dummy.cpp
